garde/tests/rules/snapshots/rules__rules__dive_with_ctx__invalid-2.snap
---
source: garde/tests/./rules/dive_with_ctx.rs
expression: snapshot
snapshot_kind: text
---
Test {
    min: 1,
    max: 5,
    inner: Inner {
        field: "asdfgh",
    },
}
inner.field: length is greater than 5
